; ModuleID = '/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions_clnt.c_tls_parse_stoc_session_ticket.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions_clnt.c_tls_parse_stoc_session_ticket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32, i32, i32 (%struct.TYPE_8__*, i32, i64, i32)* }

@SSL_AD_HANDSHAKE_FAILURE = common dso_local global i32 0, align 4
@SSL_F_TLS_PARSE_STOC_SESSION_TICKET = common dso_local global i32 0, align 4
@SSL_R_BAD_EXTENSION = common dso_local global i32 0, align 4
@SSL_AD_UNSUPPORTED_EXTENSION = common dso_local global i32 0, align 4
@SSL_AD_DECODE_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tls_parse_stoc_session_ticket(%struct.TYPE_8__* %0, i32* %1, i32 %2, i32* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_8__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 2
  %15 = load i32 (%struct.TYPE_8__*, i32, i64, i32)*, i32 (%struct.TYPE_8__*, i32, i64, i32)** %14, align 8
  %16 = icmp ne i32 (%struct.TYPE_8__*, i32, i64, i32)* %15, null
  br i1 %16, label %17, label %39

17:                                               ; preds = %5
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 2
  %21 = load i32 (%struct.TYPE_8__*, i32, i64, i32)*, i32 (%struct.TYPE_8__*, i32, i64, i32)** %20, align 8
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = call i32 @PACKET_data(i32* %23)
  %25 = load i32*, i32** %8, align 8
  %26 = call i64 @PACKET_remaining(i32* %25)
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = call i32 %21(%struct.TYPE_8__* %22, i32 %24, i64 %26, i32 %30)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %39, label %33

33:                                               ; preds = %17
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %35 = load i32, i32* @SSL_AD_HANDSHAKE_FAILURE, align 4
  %36 = load i32, i32* @SSL_F_TLS_PARSE_STOC_SESSION_TICKET, align 4
  %37 = load i32, i32* @SSL_R_BAD_EXTENSION, align 4
  %38 = call i32 @SSLfatal(%struct.TYPE_8__* %34, i32 %35, i32 %36, i32 %37)
  store i32 0, i32* %6, align 4
  br label %63

39:                                               ; preds = %17, %5
  %40 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %41 = call i32 @tls_use_ticket(%struct.TYPE_8__* %40)
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %49, label %43

43:                                               ; preds = %39
  %44 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %45 = load i32, i32* @SSL_AD_UNSUPPORTED_EXTENSION, align 4
  %46 = load i32, i32* @SSL_F_TLS_PARSE_STOC_SESSION_TICKET, align 4
  %47 = load i32, i32* @SSL_R_BAD_EXTENSION, align 4
  %48 = call i32 @SSLfatal(%struct.TYPE_8__* %44, i32 %45, i32 %46, i32 %47)
  store i32 0, i32* %6, align 4
  br label %63

49:                                               ; preds = %39
  %50 = load i32*, i32** %8, align 8
  %51 = call i64 @PACKET_remaining(i32* %50)
  %52 = icmp sgt i64 %51, 0
  br i1 %52, label %53, label %59

53:                                               ; preds = %49
  %54 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %55 = load i32, i32* @SSL_AD_DECODE_ERROR, align 4
  %56 = load i32, i32* @SSL_F_TLS_PARSE_STOC_SESSION_TICKET, align 4
  %57 = load i32, i32* @SSL_R_BAD_EXTENSION, align 4
  %58 = call i32 @SSLfatal(%struct.TYPE_8__* %54, i32 %55, i32 %56, i32 %57)
  store i32 0, i32* %6, align 4
  br label %63

59:                                               ; preds = %49
  %60 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %61 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %60, i32 0, i32 0
  %62 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %61, i32 0, i32 0
  store i32 1, i32* %62, align 8
  store i32 1, i32* %6, align 4
  br label %63

63:                                               ; preds = %59, %53, %43, %33
  %64 = load i32, i32* %6, align 4
  ret i32 %64
}

declare dso_local i32 @PACKET_data(i32*) #1

declare dso_local i64 @PACKET_remaining(i32*) #1

declare dso_local i32 @SSLfatal(%struct.TYPE_8__*, i32, i32, i32) #1

declare dso_local i32 @tls_use_ticket(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
